# nanochat

./: .gitignore  README.md  pyproject.toml  run1000.sh  rustbpe.pyi  speedrun.sh  testrun.sh
dev/: gen_synthetic_data.py  repackage_data_reference.py  runcpu.sh
nanochat/: adamw.py  checkpoint_manager.py  common.py  configurator.py  core_eval.py  dataloader.py  dataset.py  engine.py  execution.py  gpt.py  kvcache.py  loss_eval.py  muon.py  report.py  tokenizer.py
rustbpe/: Cargo.toml
rustbpe/src/: lib.rs
scripts/: base_eval.py  base_loss.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  common.py  mid_train.py  ruff.toml  tok_eval.py  tok_train.py
tasks/: arc.py  common.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: test_engine.py  test_rustbpe.py
