[project]
dependencies = [
  "datasets>=4.3.0",
  "fastapi>=0.120.0",
  "files-to-prompt>=0.6",
  "psutil>=7.1.2",
  "pyarrow>=22.0.0",
  "regex>=2025.10.23",
  "tiktoken>=0.12.0",
  "tokenizers>=0.22.1",
  "torch>=2.9.0",
  "uvicorn>=0.38.0",
  "wandb>=0.22.3",
]
description = "the minimal full-stack ChatGPT clone"
name = "nanochat"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9,<2.0"]

[tool.pyright]
reportConstantRedefinition = false

# target torch to cuda 12.8
[tool.uv.sources]
torch = [
  {index = "pytorch-cu128"},
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.maturin]
bindings = "pyo3"
exclude = ["tests/**", "scripts/**", "dev/**", "typings/**", "target/**"]
manifest-path = "rustbpe/Cargo.toml"
module-name = "rustbpe"
python-packages = ["nanochat"]
python-source = "."

[dependency-groups]
dev = [
  "maturin>=1.9.6",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
